[gd_scene load_steps=24 format=3 uid="uid://bypw7eihxexrm"]

[ext_resource type="Script" uid="uid://cox74slg0ewob" path="res://Scripts/main_scene.gd" id="1_m8nr8"]
[ext_resource type="Script" uid="uid://dupk7xq8ogjhp" path="res://Scripts/_command_processor/command_processor.gd" id="2_0vbqt"]
[ext_resource type="AudioStream" uid="uid://c2np4otufsxe5" path="res://Assets/Sounds/Fx/blink.wav" id="2_47rga"]
[ext_resource type="Texture2D" uid="uid://cxvq66lt1w87w" path="res://Assets/Scenes_images/scene0_spaceship.png" id="3_0vbqt"]
[ext_resource type="Script" uid="uid://2mdj4khts5rv" path="res://Scripts/Inventory/inventory_ui_manager.gd" id="3_w1dup"]
[ext_resource type="PackedScene" uid="uid://bx718nuvws00d" path="res://Scenes/character.tscn" id="3_yyxd1"]
[ext_resource type="PackedScene" uid="uid://t00wn4dwmk2q" path="res://Scenes/dialog_ui.tscn" id="4_0vbqt"]
[ext_resource type="Script" uid="uid://dwycxanoffwpy" path="res://Scripts/Dialogues/DialogueManager.gd" id="4_uvydw"]
[ext_resource type="Theme" uid="uid://c7kebt85foo2f" path="res://Resources/Text_format/opton_choice_button.tres" id="6_yyxd1"]
[ext_resource type="PackedScene" uid="uid://mhbb42m57i3x" path="res://Scenes/Locations/outside_starship.tscn" id="7_iypob"]
[ext_resource type="Theme" uid="uid://bws3rt7rqr07v" path="res://Resources/Text_format/Icons_UI_labels.tres" id="9_5bsxs"]
[ext_resource type="PackedScene" uid="uid://b7vmdbxmok30i" path="res://Scenes/UI/journal_ui.tscn" id="10_mhr8t"]
[ext_resource type="Texture2D" uid="uid://cutks2k55huad" path="res://Assets/UI_assets/Icons/tablet2_mini_black.png" id="11_5bsxs"]
[ext_resource type="Texture2D" uid="uid://bwrs8ogqvf3h5" path="res://Assets/UI_assets/Icons/tablet_mini_xs.png" id="11_ekaqe"]
[ext_resource type="Texture2D" uid="uid://84gtj3yhakmr" path="res://Assets/UI_assets/Icons/tablet2_mini_light.png" id="12_iypob"]
[ext_resource type="Texture2D" uid="uid://d2ud4l21aprco" path="res://Assets/UI_assets/Icons/backpack_dark_mini.png" id="13_oi7nq"]
[ext_resource type="Texture2D" uid="uid://cdpu00ngelqpd" path="res://Assets/UI_assets/Icons/tablet2_mini_color.png" id="13_udkkk"]
[ext_resource type="Texture2D" uid="uid://gd7wni1hcem0" path="res://Assets/UI_assets/Icons/backpack_light_mini.png" id="14_udkkk"]
[ext_resource type="Texture2D" uid="uid://dwqlv1hdmiw2j" path="res://Assets/UI_assets/Icons/backpack_contrast_mini.png" id="15_l42ic"]
[ext_resource type="Texture2D" uid="uid://d4bc5e5e7uqrh" path="res://Assets/UI_assets/Icons/setting_dark_mini.png" id="18_eol8w"]
[ext_resource type="Texture2D" uid="uid://bxwvtu50wm2pw" path="res://Assets/UI_assets/Icons/setting_light_mini.png" id="19_daoup"]
[ext_resource type="Texture2D" uid="uid://crck47yj4qw2q" path="res://Assets/UI_assets/Icons/setting_contrast _mini.png" id="20_bofyi"]

[sub_resource type="Theme" id="Theme_boirm"]
Button/icons/icon = ExtResource("11_ekaqe")

[node name="MainScene" type="Node2D" groups=["main_scene_group"]]
process_mode = 3
script = ExtResource("1_m8nr8")

[node name="CommandProcessor" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0vbqt")

[node name="InventoryUIManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_w1dup")

[node name="DialogueManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_uvydw")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"BGM"

[node name="NextSentenceSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_47rga")
bus = &"SFX"

[node name="InteractiveLocation" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 1

[node name="Background" type="TextureRect" parent="InteractiveLocation"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0vbqt")

[node name="interactive_location" parent="InteractiveLocation" instance=ExtResource("7_iypob")]
unique_name_in_owner = true

[node name="CanvasMain" type="CanvasLayer" parent="."]
process_mode = 1

[node name="Control" type="Control" parent="CanvasMain"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 0
offset_bottom = 100.0

[node name="CharacterSprite" parent="CanvasMain/Control" instance=ExtResource("3_yyxd1")]
layout_mode = 1

[node name="DialogUI" parent="CanvasMain" instance=ExtResource("4_0vbqt")]
visible = false

[node name="CanvasNotification" type="CanvasLayer" parent="."]

[node name="ItemAcquiredNotification" type="Label" parent="CanvasNotification"]
unique_name_in_owner = true
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = -185.0
offset_right = 353.0
offset_bottom = -133.0
grow_vertical = 2
theme = ExtResource("6_yyxd1")
theme_override_font_sizes/font_size = 20
text = "Item adquirido"
autowrap_mode = 3

[node name="NotificationTimer" type="Timer" parent="CanvasNotification/ItemAcquiredNotification"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="TimeLabel" type="Label" parent="CanvasNotification"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -164.0
offset_bottom = 89.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "12:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icons_ui" type="Control" parent="CanvasNotification"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -98.0
offset_bottom = -98.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasNotification/Icons_ui"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -133.0
offset_bottom = 133.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 12

[node name="IconContainer" type="VBoxContainer" parent="CanvasNotification/Icons_ui/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 2

[node name="JournalIconLabel" type="Label" parent="CanvasNotification/Icons_ui/MarginContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("9_5bsxs")
text = " Diario (J)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JournalIconButton" type="TextureButton" parent="CanvasNotification/Icons_ui/MarginContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_boirm")
texture_normal = ExtResource("11_5bsxs")
texture_pressed = ExtResource("12_iypob")
texture_hover = ExtResource("13_udkkk")
stretch_mode = 3

[node name="InventorylIconLabel" type="Label" parent="CanvasNotification/Icons_ui/MarginContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("9_5bsxs")
text = " Inventario (I)"
horizontal_alignment = 1

[node name="InventoryIconButton" type="TextureButton" parent="CanvasNotification/Icons_ui/MarginContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("13_oi7nq")
texture_pressed = ExtResource("14_udkkk")
texture_hover = ExtResource("15_l42ic")
stretch_mode = 3

[node name="SettingsIconLabel" type="Label" parent="CanvasNotification/Icons_ui/MarginContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("9_5bsxs")
text = " Opciones (Esc)"
horizontal_alignment = 1

[node name="SettingIconButton" type="TextureButton" parent="CanvasNotification/Icons_ui/MarginContainer/IconContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("18_eol8w")
texture_pressed = ExtResource("19_daoup")
texture_hover = ExtResource("20_bofyi")
stretch_mode = 3

[node name="JournalUI" parent="CanvasNotification" instance=ExtResource("10_mhr8t")]
unique_name_in_owner = true
process_mode = 1
visible = false

[connection signal="mouse_entered" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/JournalIconButton" to="." method="_on_journal_icon_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/JournalIconButton" to="." method="_on_journal_icon_button_mouse_exited"]
[connection signal="pressed" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/JournalIconButton" to="." method="_on_journal_icon_button_pressed"]
[connection signal="mouse_entered" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/InventoryIconButton" to="." method="_on_inventory_icon_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/InventoryIconButton" to="." method="_on_inventory_icon_button_mouse_exited"]
[connection signal="pressed" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/InventoryIconButton" to="." method="_on_inventory_icon_button_pressed"]
[connection signal="mouse_entered" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/SettingIconButton" to="." method="_on_setting_icon_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasNotification/Icons_ui/MarginContainer/IconContainer/SettingIconButton" to="." method="_on_setting_icon_button_mouse_exited"]
